--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
-    "resend": "^4.7.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "zod": "^4.1.5"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
